[package]
name = "restless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
tokio = { version = "1.28.0", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
