[package]
name = "restless-web"
version = "0.1.0"
edition = "2021"
description = "Back-end framework inspired by express.js"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
futures = "0.3.28"
once_cell = "1.17.1"
tokio = { version = "1.28.0", features = ["full"] }
